Unify error conversion in http and dav backends

Have a single function which converts libsoup error codes to gio error
codes rather than one in each backend.

https://bugzilla.gnome.org/show_bug.cgi?id=536305